--- a/app/src/main/res/layout/activity_new_incident.xml
+++ b/app/src/main/res/layout/activity_new_incident.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".vistas.NewIncident">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="243dp"
+        android:layout_height="118dp"
+        android:layout_marginBottom="276dp"
+        android:layout_marginEnd="68dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_logo_dinci" />
 </android.support.constraint.ConstraintLayout>
