--- a/app/src/main/res/drawable-v24/line_divider.xml
+++ b/app/src/main/res/drawable-v24/line_divider.xml
@@ -2,10 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <size
-        android:width="1dp"
-        android:height="1dp" />
-
-    <solid android:color="@color/colorPrimary" />
-
+    <solid android:color="@color/white"/>
+    <size android:width="100sp"
+        android:height="10sp" />
 </shape>
