--- a/app/src/main/res/layout/item_incident.xml
+++ b/app/src/main/res/layout/item_incident.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="84dp"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true">
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/comment"
-            android:layout_width="277dp"
+            android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/type"
             android:layout_alignStart="@+id/type"
@@ -51,9 +51,8 @@
             android:id="@+id/datePublication"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/comment"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="97dp"
+            android:layout_alignBottom="@+id/type"
+            android:layout_alignEnd="@+id/comment"
             android:text="TextView"
             android:textSize="10dp"
             tools:text="Jueves 30 de abril" />
