Se agrego la vista nuevo incidente y detalle de incidente, asi como la integracion de imagenes y nuevo diseño xd

--- a/app/src/main/res/layout/activity_details_noticias.xml
+++ b/app/src/main/res/layout/activity_details_noticias.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".vistas.DetailsNoticias">
 
+
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
@@ -31,7 +32,7 @@
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="109dp"
-        android:layout_below="@+id/title_noticias_detail"
+        android:layout_below="@+id/title"
         />
 
     <TextView
