--- a/app/src/main/res/layout/activity_details_incident.xml
+++ b/app/src/main/res/layout/activity_details_incident.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".vistas.DetailsIncident"
+    android:background="@drawable/grad_bg"
+
     tools:layout_editor_absoluteY="25dp">
 
     <include
@@ -19,15 +21,17 @@
     <ImageView
         android:id="@+id/imgFoto"
         android:layout_width="0dp"
-        android:layout_height="144dp"
+        android:layout_height="200dp"
+        android:layout_margin="30dp"
         android:layout_marginBottom="8dp"
+        android:src="@raw/noticia"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.116"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_logo_dinci" />
+
+        app:layout_constraintVertical_bias="0.166" />
 
     <TextView
         android:id="@+id/lblFecha"
@@ -141,7 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="64dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textSize="20sp"
