--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.halo.loginui2.Fragments.ProfileFragment">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
                     android:layout_height="150dp"
                     android:src="@drawable/ic_logo_dinci"/>
                 <TextView
+                    android:id="@+id/name"
                     android:layout_marginTop="10dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
@@ -58,12 +60,14 @@
                             android:textSize="20sp" />
 
                         <TextView
+                            android:id="@+id/cntPost"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingTop="10dp"
                             android:text="12"
                             android:textColor="@color/colorPrimary"
                             android:textSize="20sp"
+
                             android:textStyle="bold" />
 
                     </LinearLayout>
@@ -134,7 +138,9 @@
                     android:layout_height="36dp"
                     android:src="@drawable/ic_home_black_24dp"/>
                 <TextView
+                    android:id="@+id/number"
                     android:textStyle="bold"
+                    android:textColor="#fff"
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -152,7 +158,9 @@
                     android:layout_height="36dp"
                     android:src="@drawable/ic_person_black_24dp"/>
                 <TextView
+                    android:id="@+id/name2"
                     android:textStyle="bold"
+                    android:textColor="#fff"
 
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
@@ -171,7 +179,9 @@
                     android:layout_height="36dp"
                     android:src="@drawable/ic_person_black_24dp"/>
                 <TextView
+                    android:id="@+id/name3"
                     android:textStyle="bold"
+                    android:textColor="#fff"
 
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
@@ -179,36 +189,11 @@
                     android:paddingLeft="20dp"
                     android:text="Add to group"/>
             </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="25dp"
-                android:orientation="horizontal"
-                android:paddingLeft="25dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/ic_person_black_24dp"/>
-                <TextView
-                    android:textStyle="bold"
 
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:text="Show all comments"/>
-            </LinearLayout>
         </LinearLayout>
 
-        <Button
-            android:textColor="#fff"
-            android:background="@drawable/buttonstyle"
-            android:layout_marginTop="35dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Follow Me"/>
+
 
     </LinearLayout>
 
-</FrameLayout>
+</ScrollView>
